# fazz-code

./: .env.example  .env.production  .gitignore  README.md  ecosystem.config.js  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
band/: .env.example  .gitignore  README.md  agent_config.example.yaml  band_agent.py  bridge.py  fixer.py  planner.py  prompts.py  pyproject.toml  reviewer.py  run_all.py
src/: env.ts
src/app/: global-error.tsx  layout.tsx  not-found.tsx  page.tsx  providers.tsx
src/app/login/: page.tsx
src/app/profile/: page.tsx
src/app/workspace/: error.tsx  layout.tsx  loading.tsx  page.tsx
src/components/: agent-status.tsx  chat-panel.tsx  command-palette.tsx  component-library.tsx  data-model-panel.tsx  editor-panel.tsx  file-tree.tsx  preview-panel.tsx  route-manager.tsx  skeletons.tsx  user-menu.tsx  version-history.tsx  webcontainer-error-boundary.tsx
src/hooks/: use-keyboard-shortcuts.ts
src/lib/: agent-context.ts  agent-loop.ts  agent-network.ts  agent-safety.ts  agent-tools.ts  auth-server.ts  auth.ts  database.types.ts  db.ts  fixer-agent.ts  inngest.ts  model-gateway.ts  planner-agent.ts  reviewer-agent.ts  supabase-middleware.ts  supabase.ts  templates.ts  validations.ts  webcontainer.ts
src/lib/component-library/: registry.ts
src/lib/context/: context-assembler.ts  conversation-compressor.ts  design-tokens.ts  import-graph.ts  token-budget.ts
src/lib/data-model/: code-generator.ts  mock-generator.ts  (+1 more)
src/stores/: project-store.ts
supabase/migrations/: 001_initial_schema.sql
(+13 files in other folders)
